Addedd Events and Blog feature

--- a/SkyGlobal.csproj
+++ b/SkyGlobal.csproj
@@ -19,6 +19,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
+    <PackageReference Include="summernote.editor" Version="0.8.10" />
   </ItemGroup>
 
   <ItemGroup>
