--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SkyGlobal-5cb6f135-b4eb-4915-9f81-db434e261cc6;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SkyGlobal-5cb6f135-b4eb-4915-9f81-db434e261cc6;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=tcp:skyglobaldbserver.database.windows.net,1433;Initial Catalog=SkyGlobal_db;Persist Security Info=False;User ID=narmbuyu;Password=hello123@B4;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
